# nslinkhub

./: .flaskenv  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  PLANS.md  PRODUCT.md  PROJECT_STATE.md  README.md  TASKS.md  alembic.ini  biome.json  compose.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.codex/: end-session.md  restart.md  session.md  start-session.md
apps/api/: package.json  prisma.config.ts  tsconfig.json
config/: export_env  linkhub.sql  setup_mysql_dev.sql
docs/: CORE_BELIEFS.md  DEVELOPER_WORKFLOW.md  RELIABILITY.md  SECURITY.md  SYSTEM_DESIGN.md  dev-session-latest.md  hub-architecture-upgrade-plan.md  identity-sso-direction.md  implementation-status.md  infra-deployment-direction.md  nestjs-v2-feature-spec.md
docs/design-docs/: conventions.md  hub-architecture.md  identity-sso.md  index.md  infra-deployment.md  observability.md  transactional-email.md
docs/exec-plans/: README.md  TEMPLATE.md  tech-debt-tracker.md
docs/guides/: developer-onboarding-walkthrough.md
docs/runbooks/: local-development.md  migrations.md  reference-context.md  (+1 more)
ref/: README.md  hub-upgrade-next-session.md  migration-plan.md  note-for-pigfarm-stack-deploys.md  route-conflicts.md
resources/: LinkHub API.pptx  PDS.txt  RESTful_API.md  web_pds.txt
src/: app.controller.spec.ts  app.module.ts  app.setup.ts  main.ts
test/: app.e2e-spec.ts  app.e2e.spec.ts  routes.e2e.spec.ts
tooling/: check-client-boundaries.ts  check-guide-pin.ts  setup-git-hooks.ts
(+210 files in other folders)
