[project]
name = "nslinkhub"
version = "0.1.0"
description = "A web resource management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==23.2.0",
    "bcrypt==4.1.2",
    "blinker==1.7.0",
    "click==8.1.7",
    "deprecated==1.2.14",
    "dnspython==2.6.1",
    "email-validator==2.1.1",
    "flasgger==0.9.7.1",
    "flask==3.0.2",
    "flask-cors==4.0.0",
    "flask-limiter==3.5.1",
    "flask-mail==0.9.1",
    "greenlet==3.0.3",
    "gunicorn==21.2.0",
    "idna==3.6",
    "importlib-resources==6.4.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "limits==3.10.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "mysqlclient==2.2.4",
    "ordered-set==4.1.0",
    "packaging==24.0",
    "pygments==2.17.2",
    "pyjwt==2.8.0",
    "pymemcache==4.0.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "referencing==0.34.0",
    "rich==13.7.1",
    "rpds-py==0.18.0",
    "ruff>=0.11.2",
    "six==1.16.0",
    "sqlalchemy==2.0.29",
    "typing-extensions==4.11.0",
    "werkzeug==3.0.2",
    "wrapt==1.16.0",
]
